--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.1",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -30,6 +33,7 @@
     "ethers": "^6.11.1",
     "hardhat": "^2.22.2",
     "npm": "^10.5.0",
+    "typechain": "^8.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
