--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "./scripts", "./test", "./typechain-types"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "files": [
     "./hardhat.config.ts"
