--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "ethers": "^6.11.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-blockies": "^1.4.1",
     "react-dom": "^18.2.0",
     "zustand": "^4.5.2"
@@ -32,7 +34,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "ethers": "^6.11.1",
     "hardhat": "^2.22.2",
     "npm": "^10.5.0",
     "typechain": "^8.3.2",
